--- a/src/scss/base/media.scss
+++ b/src/scss/base/media.scss
@@ -234,7 +234,7 @@
 		padding: 32px 10px;
 
 		&_open {
-			width: 200px;
+			width: 90%;
 			& + main {
 				box-sizing: border-box;
 				width: 100%;
@@ -291,7 +291,10 @@
 		grid-column: 1/3;
 		&__wrapper {
 			justify-content: center;
-			grid-template-columns: 200px;
+			grid-template-columns: 1fr;
+		}
+		&__item {
+			justify-content: space-evenly;
 		}
 	}
 
@@ -324,8 +327,8 @@
 	}
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 400px) {
 	.swiper-slide {
-		width: 200px !important;
+		width: 220px !important;
 	}
 }
